--- a/01_assignment/file_converting_tool/Makefile
+++ b/01_assignment/file_converting_tool/Makefile
@@ -5,7 +5,7 @@
 ####################################################################
 
 CC = gcc
-CFLAGS = -Wall -g -O0 
+CFLAGS = -std=gnu99 -Wall -g -O0 
 LIBS =
 
 LIBPOS =
