cleaned up gccg, measures Mflops now. Removed cc= in MakeFile

--- a/01_assignment/Makefile
+++ b/01_assignment/Makefile
@@ -4,7 +4,7 @@
 #                                                                  #
 ####################################################################
 
-CC = mpicc -cc=icc
+CC = mpicc -icc
 CFLAGS = -Wall -g -O1 $(PAPI_INC) 
 LIBS = -lm $(PAPI_LIB)
 
